css/master.css
@import url('theme.css');

::-webkit-scrollbar {
	width: 0;
	background: 0 0;
}

body,
html {
	margin: auto;
	height: 100%;
	width: 100%;
	overflow: hidden;
	background-color: var(--background);
	color: var(--text);
}

.content-container {
	transition: margin 0.5s, opacity 0.5s;
	width: 80%;
	padding: 0 10%;
	height: 94%;
	display: flex;
	flex-direction: column;
	margin-top: 0px;
	overflow-y: auto;
}

